added hero image placeholder and icons

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,9 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
+        <div class="hero-background">
+            <div class="hero-overlay"></div>
+        </div>
         <div class="hero-container">
             <div class="hero-content">
                 <h1>Toeletta Mobile Professionale per Animali</h1>
@@ -57,6 +60,17 @@
                     <img src="logo.png" alt="Snip & Shine Logo" class="hero-logo">
                     <h3>Servizio Mobile</h3>
                     <p>Veniamo da te!</p>
+                </div>
+                <div class="hero-decoration">
+                    <div class="floating-element floating-1">
+                        <i class="fas fa-paw"></i>
+                    </div>
+                    <div class="floating-element floating-2">
+                        <i class="fas fa-cut"></i>
+                    </div>
+                    <div class="floating-element floating-3">
+                        <i class="fas fa-heart"></i>
+                    </div>
                 </div>
             </div>
         </div>
