--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="logo.png" alt="Snip & Shine Logo" class="nav-logo-img">
+                <img src="images/logo_notext.png" alt="Snip & Shine Logo" class="nav-logo-img">
                 <span class="nav-logo-text">
                     <span class="snip">Snip</span> & <span class="shine">Shine</span>
                 </span>
@@ -57,7 +57,7 @@
             </div>
             <div class="hero-image">
                 <div class="hero-card">
-                    <img src="logo.png" alt="Snip & Shine Logo" class="hero-logo">
+                    <img src="images/logo.png" alt="Snip & Shine Logo" class="hero-logo">
                     <h3>Servizio Mobile</h3>
                     <p>Veniamo da te!</p>
                 </div>
@@ -161,7 +161,7 @@
                 </div>
                 <div class="about-image">
                     <div class="image-placeholder">
-                        <img src="logo.png" alt="Snip & Shine Logo" class="about-logo">
+                        <img src="images/logo.png" alt="Snip & Shine Logo" class="about-logo">
                         <p>Il Nostro Furgone di Toeletta<br>a Latina e Provincia</p>
                     </div>
                 </div>
@@ -176,7 +176,7 @@
             <div class="whatsapp-content">
                 <div class="whatsapp-info">
                     <div class="whatsapp-logo-section">
-                        <img src="logo.png" alt="Snip & Shine Logo" class="whatsapp-logo">
+                        <img src="images/logo.png" alt="Snip & Shine Logo" class="whatsapp-logo">
                         <div class="whatsapp-icon">
                             <i class="fab fa-whatsapp"></i>
                         </div>
@@ -247,7 +247,7 @@
                     </div>
                 </div>
                 <div class="contact-whatsapp">
-                    <img src="logo.png" alt="Snip & Shine Logo" class="contact-logo">
+                    <img src="images/logo.png" alt="Snip & Shine Logo" class="contact-logo">
                     <h3>Contattaci su WhatsApp</h3>
                     <p>Per informazioni, preventivi o domande, contattaci direttamente su WhatsApp. Ti risponderemo il
                         prima possibile!</p>
@@ -267,7 +267,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="logo.png" alt="Snip & Shine Logo" class="footer-logo-img">
+                        <img src="images/logo_notext.png" alt="Snip & Shine Logo" class="footer-logo-img">
                         <span class="footer-logo-text">
                             <span class="snip">Snip</span> & <span class="shine">Shine</span>
                         </span>
