--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,9 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <div class="hero-background">
-            <div class="hero-overlay"></div>
-        </div>
+        <div class="hero-background"></div>
+        <div class="hero-image-bg"></div>
+        <div class="hero-overlay"></div>
         <div class="hero-container">
             <div class="hero-content">
                 <h1>Toeletta Mobile Professionale per Animali</h1>
