--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1>Toeletta Mobile Professionale per Animali</h1>
-                <p>Portiamo servizi di toeletta di lusso direttamente a casa tua. I tuoi animali domestici meritano le
+                <p>Portiamo servizi di toeletta direttamente a casa tua. I tuoi animali domestici meritano le
                     migliori cure nel comfort della propria casa.</p>
                 <div class="hero-buttons">
                     <a href="https://wa.me/393200522632" class="btn btn-primary" target="_blank">
@@ -86,33 +86,35 @@
                         <i class="fas fa-bath"></i>
                     </div>
                     <h3>Bagno & Spazzolatura</h3>
-                    <p>Bagno completo con shampoo premium, balsamo e spazzolatura accurata per un mantello sano e
+                    <p>Bagno completo con shampoo, balsamo e spazzolatura accurata per un mantello sano e
                         lucido.</p>
-                    <span class="price">Da €45</span>
+                    <span class="price">Da €20</span>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
                         <i class="fas fa-cut"></i>
                     </div>
                     <h3>Toeletta Completa</h3>
-                    <p>Pacchetto completo di toeletta inclusi bagno, taglio, limatura unghie e pulizia orecchie.</p>
-                    <span class="price">Da €65</span>
+                    <p>Pacchetto completo di toeletta inclusi bagno, taglio, taglio unghie e pulizia orecchie.</p>
+                    <span class="price">Da €40</span>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
                         <i class="fas fa-hand-sparkles"></i>
                     </div>
-                    <h3>Limatura Unghie</h3>
-                    <p>Limatura professionale delle unghie per mantenere le zampe del tuo animale sane e comode.</p>
-                    <span class="price">Da €25</span>
+                    <h3>Taglio Unghie & Pulizia</h3>
+                    <p>Taglio professionale delle unghie, pulizia delicata di occhi e orecchie per mantenere il tuo
+                        animale sano e comodo.</p>
+                    <span class="price">Da €15</span>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
-                        <i class="fas fa-ear"></i>
+                        <i class="fas fa-wind"></i>
                     </div>
-                    <h3>Pulizia Orecchie</h3>
-                    <p>Pulizia delicata delle orecchie per prevenire infezioni e mantenere una salute ottimale.</p>
-                    <span class="price">Da €20</span>
+                    <h3>Trattamento all'Ozono</h3>
+                    <p>Trattamento purificante con ozono per eliminare odori, batteri e mantenere il mantello fresco e
+                        pulito.</p>
+                    <span class="price">Da €25</span>
                 </div>
             </div>
         </div>
@@ -310,7 +312,5 @@
 
     <script src="script.js"></script>
 </body>
-
-</html>
 
 </html>
