--- a/public/index.html
+++ b/public/index.html
@@ -92,11 +92,12 @@
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
-                        <i class="fas fa-cut"></i>
+                        <i class="fas fa-wind"></i>
                     </div>
-                    <h3>Toeletta Completa</h3>
-                    <p>Pacchetto completo di toeletta inclusi bagno, taglio, taglio unghie e pulizia orecchie.</p>
-                    <span class="price">Da €40</span>
+                    <h3>Trattamento all'Ozono</h3>
+                    <p>Trattamento purificante con ozono per eliminare odori, batteri e mantenere il mantello fresco e
+                        pulito.</p>
+                    <span class="price">Da €25</span>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -109,12 +110,11 @@
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
-                        <i class="fas fa-wind"></i>
+                        <i class="fas fa-cut"></i>
                     </div>
-                    <h3>Trattamento all'Ozono</h3>
-                    <p>Trattamento purificante con ozono per eliminare odori, batteri e mantenere il mantello fresco e
-                        pulito.</p>
-                    <span class="price">Da €25</span>
+                    <h3>Toeletta Completa</h3>
+                    <p>Pacchetto completo di toeletta inclusi bagno, taglio, taglio unghie e pulizia orecchie.</p>
+                    <span class="price">Da €40</span>
                 </div>
             </div>
         </div>
@@ -274,7 +274,7 @@
                             <span class="snip">Snip</span> & <span class="shine">Shine</span>
                         </span>
                     </div>
-                    <p>Servizi professionali di toeletta mobile per animali che portano cure di lusso direttamente a
+                    <p>Servizi professionali di toeletta mobile per animali che portano cure direttamente a
                         casa tua.</p>
                 </div>
                 <div class="footer-section">
@@ -290,9 +290,9 @@
                     <h4>Servizi</h4>
                     <ul>
                         <li>Bagno & Spazzolatura</li>
+                        <li>Trattamento all'Ozono</li>
+                        <li>Taglio Unghie & Pulizia</li>
                         <li>Toeletta Completa</li>
-                        <li>Limatura Unghie</li>
-                        <li>Pulizia Orecchie</li>
                     </ul>
                 </div>
                 <div class="footer-section">
