--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <i class="fas fa-bath"></i>
                     </div>
                     <h3>Bagno & Spazzolatura</h3>
-                    <p>Bagno completo con shampoo, balsamo e spazzolatura accurata per un mantello sano e
+                    <p>Bagno completo con shampoo, balsamo e spazzolatura accurata per un manto sano e
                         lucido.</p>
                     <span class="price">Da €20</span>
                 </div>
@@ -95,7 +95,7 @@
                         <i class="fas fa-wind"></i>
                     </div>
                     <h3>Trattamento all'Ozono</h3>
-                    <p>Trattamento purificante con ozono per eliminare odori, batteri e mantenere il mantello fresco e
+                    <p>Trattamento purificante con ozono per eliminare odori, batteri e mantenere il manto fresco e
                         pulito.</p>
                     <span class="price">Da €25</span>
                 </div>
