--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snip & Shine - Toeletta Mobile per Animali</title>
+    <title>LimpiDog - Toeletta Mobile per Animali</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -16,9 +16,9 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="images/logo_notext.png" alt="Snip & Shine Logo" class="nav-logo-img">
+                <img src="images/logo.png" alt="LimpiDog Logo" class="nav-logo-img">
                 <span class="nav-logo-text">
-                    <span class="snip">Snip</span> & <span class="shine">Shine</span>
+                    <span class="limpi">Limpi</span><span class="dog">Dog</span>
                 </span>
             </div>
             <ul class="nav-menu">
@@ -42,12 +42,12 @@
     <section id="home" class="hero">
         <div class="hero-background"></div>
         <div class="hero-image-bg"></div>
-        <div class="hero-overlay"></div>
+
         <div class="hero-container">
             <div class="hero-content">
-                <h1>Toeletta Mobile Professionale per Animali</h1>
-                <p>Portiamo servizi di toeletta direttamente a casa tua. I tuoi animali domestici meritano le
-                    migliori cure nel comfort della propria casa.</p>
+                <h1>Lindi e pinti a domicilio!</h1>
+                <p>Servizi professionali di toeletta mobile per animali. Portiamo cura e attenzione direttamente a casa
+                    tua, per animali sempre puliti e felici.</p>
                 <div class="hero-buttons">
                     <a href="https://wa.me/393200522632" class="btn btn-primary" target="_blank">
                         <i class="fab fa-whatsapp"></i> Prenota su WhatsApp
@@ -55,24 +55,7 @@
                     <a href="#services" class="btn btn-secondary">I Nostri Servizi</a>
                 </div>
             </div>
-            <div class="hero-image">
-                <div class="hero-card">
-                    <img src="images/logo.png" alt="Snip & Shine Logo" class="hero-logo">
-                    <h3>Servizio Mobile</h3>
-                    <p>Veniamo da te!</p>
-                </div>
-                <div class="hero-decoration">
-                    <div class="floating-element floating-1">
-                        <i class="fas fa-paw"></i>
-                    </div>
-                    <div class="floating-element floating-2">
-                        <i class="fas fa-cut"></i>
-                    </div>
-                    <div class="floating-element floating-3">
-                        <i class="fas fa-heart"></i>
-                    </div>
-                </div>
-            </div>
+
         </div>
     </section>
 
@@ -125,7 +108,7 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h2>Perché Scegliere Snip & Shine?</h2>
+                    <h2>Perché Scegliere <span class="limpi">Limpi</span><span class="dog">Dog</span>?</h2>
                     <div class="features">
                         <div class="feature">
                             <i class="fas fa-home"></i>
@@ -163,8 +146,8 @@
                 </div>
                 <div class="about-image">
                     <div class="image-placeholder">
-                        <img src="images/logo.png" alt="Snip & Shine Logo" class="about-logo">
-                        <p>Il Nostro Furgone di Toeletta<br>a Latina e Provincia</p>
+                        <img src="images/logo.png" alt="LimpiDog Logo" class="about-logo">
+                        <p>Professionalità e Passione<br>direttamente a casa tua!</p>
                     </div>
                 </div>
             </div>
@@ -178,7 +161,7 @@
             <div class="whatsapp-content">
                 <div class="whatsapp-info">
                     <div class="whatsapp-logo-section">
-                        <img src="images/logo.png" alt="Snip & Shine Logo" class="whatsapp-logo">
+                        <img src="images/logo.png" alt="LimpiDog Logo" class="whatsapp-logo">
                         <div class="whatsapp-icon">
                             <i class="fab fa-whatsapp"></i>
                         </div>
@@ -249,7 +232,7 @@
                     </div>
                 </div>
                 <div class="contact-whatsapp">
-                    <img src="images/logo.png" alt="Snip & Shine Logo" class="contact-logo">
+                    <img src="images/logo.png" alt="LimpiDog Logo" class="contact-logo">
                     <h3>Contattaci su WhatsApp</h3>
                     <p>Per informazioni, preventivi o domande, contattaci direttamente su WhatsApp. Ti risponderemo il
                         prima possibile!</p>
@@ -269,9 +252,9 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="images/logo_notext.png" alt="Snip & Shine Logo" class="footer-logo-img">
+                        <img src="images/logo.png" alt="LimpiDog Logo" class="footer-logo-img">
                         <span class="footer-logo-text">
-                            <span class="snip">Snip</span> & <span class="shine">Shine</span>
+                            <span class="limpi">Limpi</span><span class="dog">Dog</span>
                         </span>
                     </div>
                     <p>Servizi professionali di toeletta mobile per animali che portano cure direttamente a
@@ -305,7 +288,8 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Snip & Shine. Tutti i diritti riservati.</p>
+                <p>&copy; 2025 <span class="limpi">Limpi</span><span class="dog">Dog</span>. Tutti i diritti riservati.
+                </p>
             </div>
         </div>
     </footer>
