added social images

--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LimpiDog - Toeletta Mobile per Animali</title>
+
+    <!-- Social Media Meta Tags -->
+    <meta property="og:title" content="LimpiDog - Toeletta Mobile per Animali">
+    <meta property="og:description"
+        content="Servizi professionali di toeletta mobile per animali. Portiamo cura e attenzione direttamente a casa tua, per animali sempre puliti e felici.">
+    <meta property="og:image" content="https://whirmill.github.io//snip-and-shine-website/images/logo.png">
+    <meta property="og:url" content="https://whirmill.github.io//snip-and-shine-website/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="LimpiDog">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="LimpiDog - Toeletta Mobile per Animali">
+    <meta name="twitter:description"
+        content="Servizi professionali di toeletta mobile per animali. Portiamo cura e attenzione direttamente a casa tua, per animali sempre puliti e felici.">
+    <meta name="twitter:image" content="https://whirmill.github.io//snip-and-shine-website/images/logo.png">
+
+    <!-- Additional Meta Tags -->
+    <meta name="description"
+        content="Servizi professionali di toeletta mobile per animali. Portiamo cura e attenzione direttamente a casa tua, per animali sempre puliti e felici.">
+    <meta name="keywords" content="toeletta mobile, animali, pet grooming, servizi a domicilio, Latina">
+    <meta name="author" content="LimpiDog">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
