added proper social thumbnail

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="LimpiDog - Toeletta Mobile per Animali">
     <meta property="og:description"
         content="Servizi professionali di toeletta mobile per animali. Portiamo cura e attenzione direttamente a casa tua, per animali sempre puliti e felici.">
-    <meta property="og:image" content="https://limpidog.com/images/logo.png">
+    <meta property="og:image" content="https://limpidog.com/images/social_thumbnail.png">
     <meta property="og:url" content="https://limpidog.com/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="LimpiDog">
@@ -20,7 +20,7 @@
     <meta name="twitter:title" content="LimpiDog - Toeletta Mobile per Animali">
     <meta name="twitter:description"
         content="Servizi professionali di toeletta mobile per animali. Portiamo cura e attenzione direttamente a casa tua, per animali sempre puliti e felici.">
-    <meta name="twitter:image" content="https://limpidog.com/images/logo.png">
+    <meta name="twitter:image" content="https://limpidog.com/images/social_thumbnail.png">
 
     <!-- Additional Meta Tags -->
     <meta name="description"
