--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LimpiDog - Toeletta Mobile per Animali</title>
+    <title>LimpiDog - Toelettatura Mobile per Animali</title>
 
     <!-- Social Media Meta Tags -->
-    <meta property="og:title" content="LimpiDog - Toeletta Mobile per Animali">
+    <meta property="og:title" content="LimpiDog - Toelettatura Mobile per Animali">
     <meta property="og:description"
-        content="Servizi professionali di toeletta mobile per animali. Portiamo cura e attenzione direttamente a casa tua, per animali sempre puliti e felici.">
+        content="Toelettatura professionale a domicilio: portiamo cura, igiene e coccole direttamente a casa tua. Animali puliti, profumati e senza stress.">
     <meta property="og:image" content="https://limpidog.com/images/social_thumbnail.png">
     <meta property="og:url" content="https://limpidog.com/">
     <meta property="og:type" content="website">
@@ -17,15 +17,16 @@
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="LimpiDog - Toeletta Mobile per Animali">
+    <meta name="twitter:title" content="LimpiDog - Toelettatura Mobile per Animali">
     <meta name="twitter:description"
-        content="Servizi professionali di toeletta mobile per animali. Portiamo cura e attenzione direttamente a casa tua, per animali sempre puliti e felici.">
+        content="Toelettatura professionale a domicilio: portiamo cura, igiene e coccole direttamente a casa tua. Animali puliti, profumati e senza stress.">
     <meta name="twitter:image" content="https://limpidog.com/images/social_thumbnail.png">
 
     <!-- Additional Meta Tags -->
     <meta name="description"
-        content="Servizi professionali di toeletta mobile per animali. Portiamo cura e attenzione direttamente a casa tua, per animali sempre puliti e felici.">
-    <meta name="keywords" content="toeletta mobile, animali, pet grooming, servizi a domicilio, Latina">
+        content="Toelettatura professionale a domicilio: portiamo cura, igiene e coccole direttamente a casa tua. Animali puliti, profumati e senza stress.">
+    <meta name="keywords"
+        content="toelettatura mobile, toeletta a domicilio, grooming animali, latina e provincia, bagno cani, taglio unghie">
     <meta name="author" content="LimpiDog">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
@@ -67,14 +68,14 @@
 
         <div class="hero-container">
             <div class="hero-content">
-                <h1>Lindi e pinti a domicilio!</h1>
-                <p>Servizi professionali di toeletta mobile per animali. Portiamo cura e attenzione direttamente a casa
-                    tua, per animali sempre puliti e felici.</p>
+                <h1>Lindi e pinti, direttamente a casa tua!</h1>
+                <p>Offriamo un servizio di toelettatura mobile professionale. Arriviamo da te con il nostro salone
+                    su ruote per garantire benessere e comfort al tuo animale, senza lo stress del viaggio.</p>
                 <div class="hero-buttons">
                     <a href="https://wa.me/393200522632" class="btn btn-primary" target="_blank">
                         <i class="fab fa-whatsapp"></i> Prenota su WhatsApp
                     </a>
-                    <a href="#services" class="btn btn-secondary">I Nostri Servizi</a>
+                    <a href="#services" class="btn btn-secondary">Scopri i servizi</a>
                 </div>
             </div>
 
@@ -90,36 +91,34 @@
                     <div class="service-icon">
                         <i class="fas fa-bath"></i>
                     </div>
-                    <h3>Bagno & Spazzolatura</h3>
-                    <p>Bagno completo con shampoo, balsamo e spazzolatura accurata per un manto sano e
-                        lucido.</p>
-                    <span class="price">Da €20</span>
+                    <h3>Bagno e Spazzolatura</h3>
+                    <p>Shampoo delicato, balsamo nutriente e spazzolatura accurata per un manto soffice e lucente.</p>
+                    <span class="price">A partire da €20</span>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
                         <i class="fas fa-wind"></i>
                     </div>
                     <h3>Trattamento all'Ozono</h3>
-                    <p>Trattamento purificante con ozono per eliminare odori, batteri e mantenere il manto fresco e
-                        pulito.</p>
-                    <span class="price">Da €25</span>
+                    <p>Purificazione profonda che elimina odori e batteri, lasciando il pelo fresco e igienizzato.</p>
+                    <span class="price">A partire da €10</span>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
                         <i class="fas fa-hand-sparkles"></i>
                     </div>
-                    <h3>Taglio Unghie & Pulizia</h3>
-                    <p>Taglio professionale delle unghie, pulizia delicata di occhi e orecchie per mantenere il tuo
-                        animale sano e comodo.</p>
-                    <span class="price">Da €15</span>
+                    <h3>Taglio Unghie</h3>
+                    <p>Accorciamo le unghie del tuo pet con delicatezza per garantire il massimo comfort.</p>
+                    <span class="price">A partire da €10</span>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
                         <i class="fas fa-cut"></i>
                     </div>
-                    <h3>Toeletta Completa</h3>
-                    <p>Pacchetto completo di toeletta inclusi bagno, taglio, taglio unghie e pulizia orecchie.</p>
-                    <span class="price">Da €40</span>
+                    <h3>Toelettatura Completa</h3>
+                    <p>Bagno, taglio a forbice o tosatura, rifinitura unghie e pulizia orecchie in un unico pacchetto.
+                    </p>
+                    <span class="price">A partire da €40</span>
                 </div>
             </div>
         </div>
@@ -136,32 +135,31 @@
                             <i class="fas fa-home"></i>
                             <div>
                                 <h4>Comodità</h4>
-                                <p>Niente più viaggi stressanti in auto o sale d'attesa. Portiamo il salone direttamente
-                                    a casa tua in tutta Latina e provincia.</p>
+                                <p>Niente auto né sale d’attesa: arriviamo a domicilio in tutta Latina e provincia con
+                                    il nostro salone mobile.</p>
                             </div>
                         </div>
                         <div class="feature">
                             <i class="fas fa-clock"></i>
                             <div>
                                 <h4>Orari Flessibili</h4>
-                                <p>Prenota appuntamenti dal martedì al sabato dalle 9:00 alle 18:00, orari che si
-                                    adattano alle tue esigenze.</p>
+                                <p>Prenota dal martedì al sabato, 9:00-18:00: ci adattiamo ai tuoi impegni.</p>
                             </div>
                         </div>
                         <div class="feature">
                             <i class="fas fa-heart"></i>
                             <div>
                                 <h4>Cure Personalizzate</h4>
-                                <p>Attenzione individuale in un ambiente familiare riduce lo stress per il tuo animale.
-                                </p>
+                                <p>Un ambiente familiare e tranquillo riduce l’ansia e assicura un’attenzione su misura
+                                    per ogni animale.</p>
                             </div>
                         </div>
                         <div class="feature">
                             <i class="fas fa-shield-alt"></i>
                             <div>
                                 <h4>Attrezzatura Professionale</h4>
-                                <p>Furgone mobile di toeletta all'avanguardia che raggiunge tutta Latina e provincia con
-                                    tutti gli strumenti e prodotti professionali.</p>
+                                <p>Furgone all’avanguardia dotato di attrezzature e prodotti professionali per risultati
+                                    impeccabili.</p>
                             </div>
                         </div>
                     </div>
@@ -188,9 +186,8 @@
                             <i class="fab fa-whatsapp"></i>
                         </div>
                     </div>
-                    <h3>Prenotazione via WhatsApp</h3>
-                    <p>Per prenotare un appuntamento, contattaci direttamente su WhatsApp. Ti risponderemo entro pochi
-                        minuti per confermare la disponibilità e organizzare il servizio.</p>
+                    <h3>Prenotazione veloce su WhatsApp</h3>
+                    <p>Mandaci un messaggio: ti risponderemo in pochi minuti per confermare data e ora.</p>
                     <div class="whatsapp-benefits">
                         <div class="benefit">
                             <i class="fas fa-clock"></i>
@@ -198,16 +195,16 @@
                         </div>
                         <div class="benefit">
                             <i class="fas fa-calendar-check"></i>
-                            <span>Prenotazione immediata</span>
+                            <span>Conferma immediata</span>
                         </div>
                         <div class="benefit">
                             <i class="fas fa-comments"></i>
-                            <span>Comunicazione diretta</span>
+                            <span>Chat diretta</span>
                         </div>
                     </div>
                 </div>
                 <div class="whatsapp-action">
-                    <a href="https://wa.me/393200522632?text=Ciao! Vorrei prenotare un appuntamento per la toeletta del mio animale."
+                    <a href="https://wa.me/393200522632?text=Ciao!%20Vorrei%20prenotare%20un%20appuntamento%20per%20la%20toelettatura%20del%20mio%20animale."
                         class="btn btn-whatsapp" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                         Prenota su WhatsApp
@@ -258,7 +255,7 @@
                     <h3>Contattaci su WhatsApp</h3>
                     <p>Per informazioni, preventivi o domande, contattaci direttamente su WhatsApp. Ti risponderemo il
                         prima possibile!</p>
-                    <a href="https://wa.me/393200522632?text=Ciao! Vorrei informazioni sui vostri servizi di toeletta mobile."
+                    <a href="https://wa.me/393200522632?text=Ciao!%20Vorrei%20informazioni%20sui%20vostri%20servizi%20di%20toelettatura%20mobile."
                         class="btn btn-whatsapp" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                         Scrivici su WhatsApp
@@ -275,12 +272,11 @@
                 <div class="footer-section">
                     <div class="footer-logo">
                         <img src="images/logo.png" alt="LimpiDog Logo" class="footer-logo-img">
-                        <span class="footer-logo-text">
-                            <span class="limpi">Limpi</span><span class="dog">Dog</span>
-                        </span>
+                        <span class="footer-logo-text"><span class="limpi">Limpi</span><span
+                                class="dog">Dog</span></span>
                     </div>
-                    <p>Servizi professionali di toeletta mobile per animali che portano cure direttamente a
-                        casa tua.</p>
+                    <p>Servizi professionali di toelettatura mobile che portano cura e benessere direttamente a casa
+                        tua.</p>
                 </div>
                 <div class="footer-section">
                     <h4>Link Rapidi</h4>
@@ -294,10 +290,10 @@
                 <div class="footer-section">
                     <h4>Servizi</h4>
                     <ul>
-                        <li>Bagno & Spazzolatura</li>
+                        <li>Bagno e Spazzolatura</li>
                         <li>Trattamento all'Ozono</li>
-                        <li>Taglio Unghie & Pulizia</li>
-                        <li>Toeletta Completa</li>
+                        <li>Taglio Unghie</li>
+                        <li>Toelettatura Completa</li>
                     </ul>
                 </div>
                 <div class="footer-section">
